# downloads-organizer

./: .gitignore  .secrets.baseline  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: build-and-release.yml
organizer/: organizer.py  utils.py
