[project]
name = "downloads_organizer"
version = "0.1.0"
description = "Automatically organizes Downloads directory"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/jkerola/downloads-organizer"
"Bug Tracker" = "https://github.com/jkerola/downloads_organizer/issues"
